Generalize ClassificationDataLoader The duplicating contents of MSWCDataloader and SpeechCommandsDataLoader were moved into ClassificationDataloader which uses WalkerDataset as its base.  Minor Refactoring was performed.

--- a/src/mswc_config.json
+++ b/src/mswc_config.json
@@ -2,11 +2,11 @@
   "model_name": "mswc_embedding",
   "model_version": "0_0_test_espana",
   "language": "es",
-  "load_model_from_file": true,
+  "load_model_from_file": false,
   "load_optimizer_from_file": false,
   "optimizer": "SGD",
   "optimizer_parameters": {"learning_rate":  0.001},
-  "checkpoint_version": 12,
+  "checkpoint_version": 1,
   "batches_per_epoch": 1000,
   "batch_size": 64,
   "epochs": 20,
