Add learning history handling.

--- a/src/mswc_config.json
+++ b/src/mswc_config.json
@@ -2,13 +2,13 @@
   "model_name": "test",
   "model_version": "0_0_0",
   "language": "pl",
-  "load_model_from_file": false,
-  "load_optimizer_from_file": false,
+  "load_model_from_file": true,
+  "load_optimizer_from_file": true,
   "optimizer": "SGD",
   "optimizer_parameters": {"learning_rate":  0.01},
-  "checkpoint_version": 5,
-  "batches_per_epoch": 100,
+  "checkpoint_version": 20,
+  "batches_per_epoch": 10,
   "batch_size": 64,
-  "epochs": 20,
-  "batches_per_validation": 100
+  "epochs": 10,
+  "batches_per_validation": 10
 }
