Add setup.sh, start.sh and run.sh

--- a/src/mswc_config.json
+++ b/src/mswc_config.json
@@ -2,11 +2,11 @@
   "model_name": "test",
   "model_version": "0_0_0",
   "language": "pl",
-  "load_model_from_file": true,
-  "load_optimizer_from_file": true,
+  "load_model_from_file": false,
+  "load_optimizer_from_file": false,
   "optimizer": "SGD",
   "optimizer_parameters": {"learning_rate":  0.01},
-  "checkpoint_version": 20,
+  "checkpoint_version": 1,
   "batches_per_epoch": 10,
   "batch_size": 64,
   "epochs": 10,
