--- a/src/train_mono_config.json
+++ b/src/train_mono_config.json
@@ -1,15 +1,16 @@
 {
   "model_name": "core_pl",
-  "model_version": "0_0_4",
+  "model_class": "Core",
+  "model_version": "0_0_5",
   "language": "pl",
   "load_model_from_file": true,
   "load_optimizer_from_file": false,
   "optimizer": "SGD",
-  "optimizer_parameters": {"learning_rate":  0.005},
-  "checkpoint_version": 13,
-  "batches_per_epoch": 2500,
-  "batch_size": 64,
+  "optimizer_parameters": {"learning_rate":  0.05},
+  "checkpoint_version": 19,
+  "batches_per_epoch": 1500,
+  "batch_size": 128,
   "epochs": 20,
   "batches_per_validation": 150,
-  "save_after_epochs_count": 5
+  "save_after_epochs_count": 1
 }
