--- a/src/train_mono_fs_config.json
+++ b/src/train_mono_fs_config.json
@@ -1,21 +1,22 @@
 {
-  "model_name": "core_pl_ru_fs",
+  "model_name": "core_ru_pl_fs",
   "model_class": "CoreFs",
   "model_version": "0_0_1",
-  "language": "pl",
-  "target": "безопасности",
+  "language": "ru",
+  "target_language": "pl",
+  "target": "wszystko",
   "target_probability": 0.1,
-  "load_embedding": true,
-  "embedding_name": "core_pl",
-  "embedding_version": "0_0_5",
+  "load_embedding": false,
+  "embedding_name": "core_ru",
+  "embedding_version": "0_0_6",
   "embedding_class": "Core",
-  "embedding_checkpoint_version": 22,
-  "load_model_from_file": false,
+  "embedding_checkpoint_version": 6,
+  "load_model_from_file": true,
   "load_optimizer_from_file": false,
-  "optimizer": "Adam",
+  "optimizer": "SGD",
   "optimizer_parameters": {"learning_rate":  0.001},
-  "checkpoint_version": 0,
-  "batches_per_epoch": 200,
+  "checkpoint_version": 5,
+  "batches_per_epoch": 1000,
   "batch_size": 128,
   "epochs": 20,
   "batches_per_validation": 100,
