--- a/src/validate_mono_fs_config.json
+++ b/src/validate_mono_fs_config.json
@@ -5,22 +5,16 @@
   "target_language": "ru",
   "target": "безопасности",
   "target_probability": 0.4,
-  "load_model_from_file": true,
+  "load_model_from_file": false,
   "checkpoint_version": 1,
 
-  "load_embedding": false,
+  "load_embedding": true,
   "embedding_name": "core_ru",
   "embedding_version": "0_0_6",
   "embedding_class": "Core",
+  "embedding_output_channels": 265,
   "embedding_checkpoint_version": 6,
 
-  "load_optimizer_from_file": false,
-  "optimizer": "Adam",
-  "optimizer_parameters": {"learning_rate":  0.001},
-
-  "batches_per_epoch": 256,
   "batch_size": 128,
-  "epochs": 1,
-  "batches_per_validation": 100,
-  "save_after_epochs_count": 1
+  "batches_per_validation": 100
 }
