--- a/src/train_multi_fs_config.json
+++ b/src/train_multi_fs_config.json
@@ -1,24 +1,28 @@
 {
-  "model_name": "core_pl_again_again",
+  "model_name": "core_popular_100",
   "model_class": "CoreFs",
-  "model_version": "0_0_2",
-  "languages": ["ru", "pl"],
+  "model_version": "0_1_1",
+  "languages": ["ru", "pl", "el", "cs"],
+  "dataset_part": "popular_100",
   "target_language": "ru",
-  "dataset_part": "popular",
   "target": "безопасности",
   "target_probability": 0.4,
-  "load_model_from_file": false,
+  "load_model_from_file": true,
   "checkpoint_version": 1,
 
-  "load_embedding": true,
-  "embedding_name": "core_ru",
-  "embedding_version": "0_0_6",
+  "load_embedding": false,
+  "embedding_name": "core_popular_100",
+  "embedding_version": "0_1_0",
   "embedding_class": "Core",
-  "embedding_checkpoint_version": 6,
+  "embedding_checkpoint_version": 12,
 
-  "load_optimizer_from_file": false,
-  "optimizer": "Adam",
-  "optimizer_parameters": {"learning_rate":  0.001},
+  "load_optimizer_from_file": true,
+  "optimizer_class": "SGD",
+  "optimizer_parameters": {"lr":  0.001},
+
+  "load_scheduler_from_file": true,
+  "scheduler_class": "ExponentialLR",
+  "scheduler_parameters": {"gamma":  0.9},
 
   "batches_per_epoch": 256,
   "batch_size": 64,
