--- a/src/validate_multi_config.json
+++ b/src/validate_multi_config.json
@@ -1,10 +1,9 @@
 {
-  "model_name": "core_[ru]_again",
+  "model_name": "core_popular_100",
   "model_class": "Core",
-  "model_version": "0_0_7",
-  "languages": ["ru"],
-  "dataset_part": "popular",
-  "load_model_from_file": true,
+  "model_version": "0_1_1",
+  "languages": ["ru", "pl", "el", "cs"],
+  "dataset_part": "popular_100",
   "checkpoint_version": 1,
 
   "batch_size": 128,
