--- a/src/train_config.json
+++ b/src/train_config.json
@@ -1,23 +1,23 @@
 {
-  "model_name": "core_popular_100",
-  "model_class": "Core",
-  "model_version": "0_1_1",
-  "languages": ["ru", "pl", "el", "cs"],
-  "dataset_part": "popular_100",
-  "load_model_from_file": true,
-  "checkpoint_version": 1,
+  "model_name": "test_[it]_4",
+  "model_class": "CnnY",
+  "model_version": "0_0_0",
+  "languages": ["it"],
+  "dataset_part": "top_180_len_4",
+  "load_model_from_file": false,
+  "checkpoint_version": 0,
 
   "load_optimizer_from_file": false,
   "optimizer_class": "Adam",
-  "optimizer_parameters": {"lr":  0.1},
+  "optimizer_parameters": {"lr":  0.001},
 
   "load_scheduler_from_file": false,
   "scheduler_class": "ExponentialLR",
-  "scheduler_parameters": {"gamma":  0.9},
+  "scheduler_parameters": {"gamma":  0.85},
 
-  "batches_per_epoch": 200,
-  "batch_size": 32,
-  "epochs": 10,
+  "batches_per_epoch": 1000,
+  "batch_size": 128,
+  "epochs": 20,
   "batches_per_validation": 100,
-  "save_after_epochs_count": 1
+  "save_after_epochs_count": 5
 }
