--- a/src/validate_config.json
+++ b/src/validate_config.json
@@ -1,11 +1,11 @@
 {
-  "model_name": "core_popular_100",
+  "model_name": "core_tt_top_180_len_4",
   "model_class": "Core",
   "model_version": "0_1_1",
-  "languages": ["ru", "pl", "el", "cs"],
-  "dataset_part": "popular_100",
-  "checkpoint_version": 1,
+  "languages": ["tt"],
+  "dataset_part": "top_180_len_4",
+  "checkpoint_version": 4,
 
   "batch_size": 128,
-  "batches_per_validation": 150
+  "batches_per_validation": 200
 }
